# sunitab55.github.io

./: .gitignore  .gitmodules  .prettierignore  404.html  CNAME  Cargo.toml  Makefile  bower.json  elements.html  index.html  keybase.txt  next.config.js  package-lock.json  package.json  robots.txt
.github/workflows/: deploy.yml
_next/static/CzEaVb1OtKvEBCE4m7R4U/: _buildManifest.js
_next/static/JCmrLTZ2AGzfcYMMNT3Sm/: _buildManifest.js
_next/static/L8M4cqfE7fH6_dtm6ZD67/: _buildManifest.js
_next/static/Q5QBbfLI90HX0PebiAFdg/: _buildManifest.js
_next/static/SfRNvXP_KMiOoEJv8rbq-/: _buildManifest.js
_next/static/Ty-8E-PLLhJh3QDxyLcSV/: _buildManifest.js
_next/static/XZiNNNHiQxy2TvVAGqsQ-/: _buildManifest.js
_next/static/X_W87r2lKQYaTQ96KGsy8/: _buildManifest.js
_next/static/aHhDvs28F8xWWY7MbTY3C/: _buildManifest.js
_next/static/chunks/: 65-c5c69c5c8d7d01b50cc6.js  (+3 more)
assets/css/: main.css  noscript.css
assets/sass/: noscript.scss
blog/blog/: CHANGELOG.md  LICENSE  README.md  _config.yml  _includes  _layouts  _pages  _sass  css  feed.xml  index.html
components/: Analytics.js  Head.js  Introduction.js  SocialLinks.js
frontend/: .gitignore  package-lock.json  package.json
frontend/components/: introduction.js  nav.js  social.js  swe-blog.js
frontend/pages/: index.js  resume.js
frontend/styles/: custom.css
pages/: _app.js  _document.js  index.js
public/: index.html
scripts/: main.js
src/: .gitignore  db.rs  geoip.rs  main.rs
styles/: Home.module.css  Introduction.module.css  SocialLinks.module.css  globals.css  style.css
(+44 files in other folders)
