[package]
name = "backend"
version = "0.1.0"
authors = ["Souvik Banerjee <souvik1997@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.17"
rust-embed = "4.3.0"
mime_guess = "2.0.0-alpha.6"
rusqlite = {version = "0.15.0", features = ["bundled"]}
futures = "0.1.25"
env_logger = "0.6.0"
r2d2 = "0.8.3"
r2d2_sqlite = "0.7.0"
time = "0.1.42"
json = "0.11.13"
serde = "1.0.84"
serde_json = "1.0.34"
serde_derive = "1.0.84"
